deposits done and added integration tests
