# src/main/java/com/example/ledger/api/AccountController.java
@@ -1,35 +1,34 @@
 package com.example.ledger.api;
 
 import com.example.ledger.generated.api.AccountApi;
-import com.example.ledger.generated.model.Balance;
-import com.example.ledger.generated.model.Transaction;
-import com.example.ledger.generated.model.TransactionRequest;
-import java.util.List;
+import com.example.ledger.generated.model.DepositRequest;
+import com.example.ledger.generated.model.TransactionResponse;
+import com.example.ledger.mappers.AccountMapper;
+import com.example.ledger.models.Deposit;
+import com.example.ledger.service.AccountService;
 import java.util.UUID;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public class AccountController implements AccountApi {
-  @Override
-  public ResponseEntity<Transaction> createDeposit(
-      UUID accountId, TransactionRequest transactionRequest) {
-    return AccountApi.super.createDeposit(accountId, transactionRequest);
+
+  private final AccountService accountService;
+  private final AccountMapper accountMapper;
+
+  public AccountController(AccountService accountService, AccountMapper accountMapper) {
+    this.accountService = accountService;
+    this.accountMapper = accountMapper;
   }
 
   @Override
-  public ResponseEntity<Transaction> createWithdrawal(
-      UUID accountId, TransactionRequest transactionRequest) {
-    return AccountApi.super.createWithdrawal(accountId, transactionRequest);
-  }
+  public ResponseEntity<TransactionResponse> createDeposit(
+      UUID accountId, DepositRequest depositRequest) {
 
-  @Override
-  public ResponseEntity<Balance> getBalance(UUID accountId) {
-    return AccountApi.super.getBalance(accountId);
-  }
+    Deposit deposit = accountService.createDeposit(accountId, depositRequest.getAmount());
+    TransactionResponse transaction =
+        accountMapper.toTransactionResponse(deposit, TransactionResponse.TypeEnum.DEPOSIT);
 
-  @Override
-  public ResponseEntity<List<Transaction>> getTransactions(UUID accountId) {
-    return AccountApi.super.getTransactions(accountId);
+    return ResponseEntity.status(201).body(transaction);
   }
 }
